--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "admin-page",
+  "name": "e-learning",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.2",
+    "@material-ui/core": "4.5.2",
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "formik": "^2.0.3",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -19,7 +20,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "yarn": "^1.17.3"
+    "yarn": "^1.19.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
