--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@material-ui/icons": "^4.4.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "formik": "^2.0.3",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
@@ -20,8 +19,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "yarn": "^1.19.1",
-    "yup": "^0.27.0"
+    "yarn": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
